[gd_scene load_steps=5 format=2]

[ext_resource path="res://bmw_sprite.png" type="Texture" id=1]
[ext_resource path="res://road.jpg" type="Texture" id=2]
[ext_resource path="res://Background.png" type="Texture" id=3]
[ext_resource path="res://Car.gd" type="Script" id=4]

[node name="MovementEquation" type="Node2D"]

[node name="TimeSlider" type="HSlider" parent="."]
margin_left = 17.0
margin_top = 10.0
margin_right = 1011.0
margin_bottom = 26.0
max_value = 1.0
step = 0.01
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 511.353, 368.441 )
scale = Vector2( 1.03385, 1.03385 )
texture = ExtResource( 3 )

[node name="road" type="Sprite" parent="."]
position = Vector2( 508.617, 566.253 )
scale = Vector2( 1.01687, 1 )
texture = ExtResource( 2 )

[node name="Car" type="Node2D" parent="."]
position = Vector2( 71.7804, 505.63 )
script = ExtResource( 4 )
speed = 10.0
acceleration = 1.0

[node name="Pivot" type="Position2D" parent="Car"]

[node name="bmw_sprite" type="Sprite" parent="Car/Pivot"]
position = Vector2( 0, -20.4482 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="SpeedContainer" type="ColorRect" parent="Car"]
margin_left = -60.0
margin_top = -65.0
margin_right = 60.0
margin_bottom = -49.0
color = Color( 0, 0, 0, 0.568627 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedValue" type="Label" parent="Car/SpeedContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.5
margin_top = -7.0
margin_right = 25.5
margin_bottom = 7.0
grow_horizontal = 2
text = "Greitis: "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PositionContainer" type="ColorRect" parent="Car"]
margin_left = -64.0
margin_top = 10.0
margin_right = 64.0
margin_bottom = 26.0
color = Color( 0, 0, 0, 0.568627 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PositionValue" type="Label" parent="Car/PositionContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -26.5
margin_top = -7.0
margin_right = 26.5
margin_bottom = 7.0
grow_horizontal = 2
text = "Pozicija:"
align = 1

[node name="DeltaPosContainer" type="ColorRect" parent="Car"]
margin_left = -64.0
margin_top = 28.0
margin_right = 64.0
margin_bottom = 44.0
color = Color( 0, 0, 0, 0.568627 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeltaPosValue" type="Label" parent="Car/DeltaPosContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.5
margin_top = -7.0
margin_right = 25.5
margin_bottom = 7.0
grow_horizontal = 2
text = "Kelias:"
align = 1

[node name="EquationValues" type="GridContainer" parent="."]
margin_left = 18.0
margin_top = 36.0
margin_right = 215.0
margin_bottom = 183.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PositionLabel" type="Label" parent="EquationValues"]
margin_top = 5.0
margin_right = 105.0
margin_bottom = 19.0
text = "Pardine pozicija:"
align = 2

[node name="PositionValue" type="LineEdit" parent="EquationValues"]
margin_left = 109.0
margin_right = 167.0
margin_bottom = 24.0
text = "0"

[node name="SpeedLabel" type="Label" parent="EquationValues"]
margin_top = 33.0
margin_right = 105.0
margin_bottom = 47.0
text = "Pradinis greitis:"
align = 2

[node name="SpeedValue" type="LineEdit" parent="EquationValues"]
margin_left = 109.0
margin_top = 28.0
margin_right = 167.0
margin_bottom = 52.0
text = "10"

[node name="AccelerationLabel" type="Label" parent="EquationValues"]
margin_top = 61.0
margin_right = 105.0
margin_bottom = 75.0
text = "Pagreitis:"
align = 2

[node name="AccelerationValue" type="LineEdit" parent="EquationValues"]
margin_left = 109.0
margin_top = 56.0
margin_right = 167.0
margin_bottom = 80.0
text = "1"

[node name="Time" type="GridContainer" parent="."]
margin_left = 864.688
margin_top = 36.0
margin_right = 1006.69
margin_bottom = 70.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="Time"]
margin_top = 5.0
margin_right = 80.0
margin_bottom = 19.0
text = "Visas Laikas:"
align = 2

[node name="TimeValue" type="LineEdit" parent="Time"]
margin_left = 84.0
margin_right = 142.0
margin_bottom = 24.0
text = "10"
[connection signal="value_changed" from="TimeSlider" to="Car" method="_on_Time_value_changed"]
[connection signal="text_entered" from="EquationValues/PositionValue" to="Car" method="_on_PositionValue_entered"]
[connection signal="text_entered" from="EquationValues/SpeedValue" to="Car" method="_on_SpeedValue_entered"]
[connection signal="text_entered" from="EquationValues/AccelerationValue" to="Car" method="_on_AccelerationValue_entered"]
[connection signal="text_entered" from="Time/TimeValue" to="Car" method="_on_TimeValue_entered"]
